chore: 프로필 그룹에 infrastructure 추가

--- a/rouletteup-admin/src/main/resources/application.yml
+++ b/rouletteup-admin/src/main/resources/application.yml
@@ -5,5 +5,5 @@ spring:
   profiles:
     active: local
     group:
-      local: common, domain
-      prod: common, domain
+      local: common, domain, infrastructure
+      prod: common, domain, infrastructure
