chore: cd 배포 결정 조건에 infra 모듈 추가

--- a/.github/workflows/deploy-common.yml
+++ b/.github/workflows/deploy-common.yml
@@ -42,7 +42,7 @@ jobs:
               DEPLOY_APP=true
             elif [[ "$file" == rouletteup-admin/* ]]; then
               DEPLOY_ADMIN=true
-            elif [[ "$file" == rouletteup-common/* || "$file" == rouletteup-domain/* ]]; then
+            elif [[ "$file" == rouletteup-common/* || "$file" == rouletteup-domain/* || "$file" == rouletteup-infrastructure/* ]]; then
               DEPLOY_APP=true
               DEPLOY_ADMIN=true
               break
