chore: 서버간 통신을 위한 환경변수 설정

--- a/rouletteup-admin/src/main/resources/application.yml
+++ b/rouletteup-admin/src/main/resources/application.yml
@@ -7,3 +7,9 @@ spring:
     group:
       local: common, domain, infrastructure
       prod: common, domain, infrastructure
+
+internal:
+  app:
+    base-url: ${BASE_URL:http://localhost:8080}
+    token: ${TOKEN:CHANGE}
+    token-header-name: ${TOKEN_HEADER:X-Internal-Token}
