chore: admin 서버 스웨거 경로 변경

--- a/rouletteup-admin/src/main/resources/application.yml
+++ b/rouletteup-admin/src/main/resources/application.yml
@@ -13,3 +13,9 @@ internal:
     base-url: ${BASE_URL:http://localhost:8080}
     token: ${TOKEN:CHANGE}
     token-header-name: ${TOKEN_HEADER:X-Internal-Token}
+
+springdoc:
+  api-docs:
+    path: /admin/v3/api-docs
+  swagger-ui:
+    path: /admin/swagger-ui.html
